--- a/app/styles/index.scss
+++ b/app/styles/index.scss
@@ -8,9 +8,12 @@ $padding-large: 25px;
   padding: 0;
 }
 
-html, body, #root, .app {
+html, body {
   height: 100%;
-  width: 100%;
+}
+
+#root, .app {
+  min-height: 100vh;
 }
 
 .app-container {
